--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^12.33.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "next-themes": "^0.4.6",
     "openai": "^6.18.0",
     "puppeteer": "^24.37.2",
     "radix-ui": "^1.4.3",
